# Aether

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
assets/: ABeautifulGame.scene  ABeautifulGame.scene.toml  alignment.materials.toml  alignment_floor_only.scene.toml  alignment_suzanne.scene.toml  bunny.materials.toml  bunny.scene.toml  bunny_shaderball.materials.toml  bunny_shaderball.scene.toml  camera_suzanne.materials.toml  camera_suzanne.scene.toml  cornell.materials.toml  cornell.mtlx  cornell_alignment.materials.toml  cornell_alignment.scene.toml  cornell_classic.scene  cornell_classic.scene.toml  cornell_classic_rec709.scene.toml  cornell_empty.scene  cornell_empty.scene.toml  cornell_empty_overlay.scene.toml  cornell_spheres.scene  cornell_spheres.scene.toml  cornell_suzanne.scene  cornell_suzanne.scene.toml  cornell_textured_cube.scene.toml  dragon_teapot.materials.toml  dragon_teapot.mtlx  dragon_teapot.scene  dragon_teapot.scene.toml  fixture_directional.materials.toml  fixture_directional.scene.toml  fixture_emissive.materials.toml  fixture_emissive.scene.toml  fixture_ibl.materials.toml  fixture_ibl.scene.toml  fixture_ibl_env1.scene.toml  fixture_point_light.materials.toml  fixture_point_light.scene.toml  fixture_rect_light.materials.toml  (+92 more)
assets/ABeautifulGame/: ABeautifulGame.materials.toml  ABeautifulGame.mtlx
assets/presets/: abeautifulgame.camera.toml  aces.tonemap.toml  agx.tonemap.toml  alignment.camera.toml  alignment_16spp_8bounce.render.toml  bunny_shaderball.camera.toml  camera_suzanne.camera.toml  comparison_512spp.render.toml  comparison_64spp.render.toml  comparison_direct_512spp.render.toml  comparison_ibl_512spp.render.toml  cornell.camera.toml  cornell_alignment.camera.toml  dragon_teapot.camera.toml  fixture.camera.toml  fixture_ibl.camera.toml  meadow.camera.toml  meadow_128spp_12bounce.render.toml  meadow_128spp_16bounce.render.toml  meadow_128spp_8bounce.render.toml  meadow_16spp_10bounce.render.toml  meadow_256spp_12bounce.render.toml  meadow_64spp_6bounce.render.toml  meadow_64spp_8bounce.render.toml  mr_sphere.camera.toml  openpbr_studio_far.camera.toml  openpbr_studio_near.camera.toml  openpbr_studio_wide.camera.toml  preview.render.toml  relax_256spp_16bounce.render.toml
cmake/: Platform.cmake
src/aether/: Aether.hpp
src/aether/format/: MaterialLibrary.cpp  MaterialLibrary.hpp  ObjImporter.cpp  ObjImporter.hpp  SceneParser.cpp  SceneParser.hpp
src/aether/types/: MaterialDesc.hpp  Math.hpp  MeshData.hpp  SceneDesc.hpp  TextureColorSpace.hpp
tests/: CMakeLists.txt  test_material_library.cpp  test_obj_importer.cpp  test_scene_parser.cpp
tools/: .gitignore  README.md  compare_renders.py  rotate_obj_y.py  scale_obj.py  translate_obj_x.py  translate_obj_y.py  translate_obj_z.py
tools/aether_blender_exporter/: __init__.py
tools/mtlx_to_toml_converter/: __init__.py  mtlx_to_toml.py
tools/mtlx_to_toml_converter/examples/: bunny.mtlx  bunny_openpbr.materials.toml  shader_ball.mtlx  shader_ball_openpbr.materials.toml
tools/mtlx_to_toml_converter/tests/: run_tests.py
tools/mtlx_to_toml_converter/tests/expected/: car_paint_red.materials.toml  clear_glass.materials.toml  diffuse_gray.materials.toml  emissive_panel.materials.toml  polished_copper.materials.toml  textured_wood.materials.toml
tools/mtlx_to_toml_converter/tests/fixtures/: car_paint_red.mtlx  clear_glass.mtlx  diffuse_gray.mtlx  emissive_panel.mtlx  not_openpbr_standard_surface.mtlx  polished_copper.mtlx  textured_wood.mtlx
